Make sure the default spacing is correct

--- a/src/components/box.css
+++ b/src/components/box.css
@@ -5,6 +5,6 @@
   border-radius: var(--border-radius);
 
   &--with-spacing {
-    padding: var(--spacing-normal);
+    padding: var(--spacing-6);
   }
 }
